# solar

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: checks.yml  cmake.yml
examples/: fib.sol  fibonacci.sol  local_variables.sol  printf.sol  simple_call.sol  simple_function.sol  simple_function_consumer.cpp  simple_function_with_arguments.sol
scripts/: setup-llvm.ps1  setup-llvm.sh
src/: CMakeLists.txt  ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  token.cpp  token.hpp
tests/: CMakeLists.txt  catch.hpp  codegen_tests.cpp  lexer_test.cpp  parser_test.cpp
tests/catch/: .clang-format  catch.hpp
